--- a/style.css
+++ b/style.css
@@ -14,27 +14,24 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.topnav {
-  display: flex;
-  flex-direction: row;
+#TopMenu{
+  display: grid;
+   grid-template-columns: auto auto;
   position: fixed;
   top: 0;
   z-index: 1;
   width: 100%;
   background-color: #2c2d2d;
 
-  
 }
 
-#menuWrapper {
-  margin: 0;
-}
+
 
 .topnavWithoutLogo {
-  float: left;
+  
   color: silver;
   text-align: center;
-  padding: 1.2em 1.5em 1em 1.5em;
+  padding: 1.5em 3em 1em 3em;
   text-decoration: none;
   font-size: 17px;
   
@@ -44,12 +41,12 @@ body {
     margin-right: 2em;
 }
 
-.topnav a:hover {
+a:hover {
   background-color: #003678c2;
   color: rgb(255, 255, 255);
 }
 
-.topnav a.active {
+.active {
   background-color: #003678c2;
   color: white;
 }
@@ -91,15 +88,14 @@ h1 {
 #mainBanner{
     z-index: -1;
     position: relative;
-    
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);
     top: -20em;
 }
 
 #tree {
-  
-  position: relative;
-  left: 3.3em;
-  top: 4.7em;
+  position:relative;
+  left: 4em;
+  top: 5.5em;
   background-color: #2c2d2d;
   padding: 1em 0 0 1em;
   clip-path: polygon(0 0, 100% 0, 100% 93%, 50% 100%, 0 93%);
@@ -139,7 +135,7 @@ h1 {
 }
 
 .foot {
-  clip-path: polygon(50% 0, 100% 8%, 100% 100%, 0 100%, 0 8%);
+  
   display: grid;
   grid-template-columns: 2fr 1.5fr 1fr;
   color: gold;
@@ -236,4 +232,10 @@ footer #copy {
   background-color: rgba(220, 180, 20, 0.568);
   border: none;
   width: 100%;
+  }
+#navFlexRight{
+width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
