--- a/style.css
+++ b/style.css
@@ -9,14 +9,13 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='400' cy='400' r='50%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23FFEE33'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='400' cy='400' r='70%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23FFEE33'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='800'/%3E%3Cg fill-opacity='0.89'%3E%3Cpath fill='url(%23b)' d='M998.7 439.2c1.7-26.5 1.7-52.7 0.1-78.5L401 399.9c0 0 0-0.1 0-0.1l587.6-116.9c-5.1-25.9-11.9-51.2-20.3-75.8L400.9 399.7c0 0 0-0.1 0-0.1l537.3-265c-11.6-23.5-24.8-46.2-39.3-67.9L400.8 399.5c0 0 0-0.1-0.1-0.1l450.4-395c-17.3-19.7-35.8-38.2-55.5-55.5l-395 450.4c0 0-0.1 0-0.1-0.1L733.4-99c-21.7-14.5-44.4-27.6-68-39.3l-265 537.4c0 0-0.1 0-0.1 0l192.6-567.4c-24.6-8.3-49.9-15.1-75.8-20.2L400.2 399c0 0-0.1 0-0.1 0l39.2-597.7c-26.5-1.7-52.7-1.7-78.5-0.1L399.9 399c0 0-0.1 0-0.1 0L282.9-188.6c-25.9 5.1-51.2 11.9-75.8 20.3l192.6 567.4c0 0-0.1 0-0.1 0l-265-537.3c-23.5 11.6-46.2 24.8-67.9 39.3l332.8 498.1c0 0-0.1 0-0.1 0.1L4.4-51.1C-15.3-33.9-33.8-15.3-51.1 4.4l450.4 395c0 0 0 0.1-0.1 0.1L-99 66.6c-14.5 21.7-27.6 44.4-39.3 68l537.4 265c0 0 0 0.1 0 0.1l-567.4-192.6c-8.3 24.6-15.1 49.9-20.2 75.8L399 399.8c0 0 0 0.1 0 0.1l-597.7-39.2c-1.7 26.5-1.7 52.7-0.1 78.5L399 400.1c0 0 0 0.1 0 0.1l-587.6 116.9c5.1 25.9 11.9 51.2 20.3 75.8l567.4-192.6c0 0 0 0.1 0 0.1l-537.3 265c11.6 23.5 24.8 46.2 39.3 67.9l498.1-332.8c0 0 0 0.1 0.1 0.1l-450.4 395c17.3 19.7 35.8 38.2 55.5 55.5l395-450.4c0 0 0.1 0 0.1 0.1L66.6 899c21.7 14.5 44.4 27.6 68 39.3l265-537.4c0 0 0.1 0 0.1 0L207.1 968.3c24.6 8.3 49.9 15.1 75.8 20.2L399.8 401c0 0 0.1 0 0.1 0l-39.2 597.7c26.5 1.7 52.7 1.7 78.5 0.1L400.1 401c0 0 0.1 0 0.1 0l116.9 587.6c25.9-5.1 51.2-11.9 75.8-20.3L400.3 400.9c0 0 0.1 0 0.1 0l265 537.3c23.5-11.6 46.2-24.8 67.9-39.3L400.5 400.8c0 0 0.1 0 0.1-0.1l395 450.4c19.7-17.3 38.2-35.8 55.5-55.5l-450.4-395c0 0 0-0.1 0.1-0.1L899 733.4c14.5-21.7 27.6-44.4 39.3-68l-537.4-265c0 0 0-0.1 0-0.1l567.4 192.6c8.3-24.6 15.1-49.9 20.2-75.8L401 400.2c0 0 0-0.1 0-0.1L998.7 439.2z'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
-
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #TopMenu{
   display: grid;
-   grid-template-columns: auto auto;
+  grid-template-columns: auto auto;
   position: fixed;
   top: 0;
   z-index: 1;
@@ -31,9 +30,10 @@ body {
   
   color: silver;
   text-align: center;
-  padding: 1.5em 3em 1em 3em;
+  padding: 1.6em 2em 1em 2em;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.3em;
+  font-weight:600;
   
 }
 
@@ -42,13 +42,14 @@ body {
 }
 
 a:hover {
-  background-color: #003678c2;
-  color: rgb(255, 255, 255);
+  background-color:gold;
+  color: black;
+  transition: 0.3s ease;
 }
 
 .active {
-  background-color: #003678c2;
-  color: white;
+  background-color:gold;
+  color: black;
 }
 
 .topnav .icon {
@@ -60,7 +61,7 @@ a:hover {
   grid-template-columns: 18% 18% 18% 18% 18%;
   grid-gap: 0.5em;
   width: 100%;
-  margin: -20em 5% 0.5em 5%;
+  margin: -33em 5% 0.5em 5%;
 }
 
 .wrapper img {
@@ -89,7 +90,7 @@ h1 {
     z-index: -1;
     position: relative;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
-    top: -20em;
+    top: -34em;
 }
 
 #tree {
@@ -97,10 +98,10 @@ h1 {
   left: 4em;
   top: 5.5em;
   background-color: #2c2d2d;
-  padding: 1em 0 0 1em;
+  padding: 2em 0 0 2em;
   clip-path: polygon(0 0, 100% 0, 100% 93%, 50% 100%, 0 93%);
-  height:24em;
-  width: 13em;
+  height:35em;
+  width: 20em;
   
 }
 
@@ -108,10 +109,12 @@ h1 {
   color: silver;
   text-decoration: none;
   margin-bottom: 20px;
+  font-size: 1.5em;
 }
 
 .sideMenu:hover {
   color: darkgoldenrod;
+  background-color: transparent;
 }
 
 
@@ -120,7 +123,8 @@ h1 {
   background-color: white;
   padding: 1em;
   margin: 1em;
-  clip-path: polygon(0 0, 100% 0, 100% 93%, 50% 100%, 0 93%);}
+  height: 100%;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);}
 
 .itemBottom {
   grid-column-start: 1;
@@ -197,21 +201,22 @@ footer #copy {
 
 #search{
   margin: auto 0.1em auto 1em;
-  height: 2.5em;
+  height: 3em;
+  border: white;
   width: 20em;
 }
 
 #find{
-  background-color: #003678c2;
+  background-color: silver;
   color: white;
   margin: auto 1em auto 4px;
-  height: 2.5em;
-  width: 2.5em;
+  height: 3em;
+  width: 3em;
   border: none;
 }
 
 #find:hover{
-  background-color: #0159c5c2;
+  background-color: gold;
   color: white;
   cursor: pointer;
 
