--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@ body {
 
 }
 
-
-
 .topnavWithoutLogo {
   
   color: silver;
@@ -36,20 +34,24 @@ body {
   font-weight:600;
   
 }
-
 #logo{
     margin-right: 2em;
 }
 
 a:hover {
-  background-color:gold;
-  color: black;
+  background-color: #2c2d2d;
+  color: rgb(255, 255, 255);
   transition: 0.3s ease;
+  height: 124%;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
 }
 
 .active {
-  background-color:gold;
-  color: black;
+  background-color: #2c2d2d;
+  color: rgb(255, 255, 255);
+  height: 124%;
+ clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
+
 }
 
 .topnav .icon {
@@ -61,7 +63,7 @@ a:hover {
   grid-template-columns: 18% 18% 18% 18% 18%;
   grid-gap: 0.5em;
   width: 100%;
-  margin: -33em 5% 0.5em 5%;
+  margin: -30em 5% 0.5em 5%;
 }
 
 .wrapper img {
@@ -90,7 +92,7 @@ h1 {
     z-index: -1;
     position: relative;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
-    top: -34em;
+    top: -28.8em;
 }
 
 #tree {
@@ -99,7 +101,7 @@ h1 {
   top: 5.5em;
   background-color: #2c2d2d;
   padding: 2em 0 0 2em;
-  clip-path: polygon(0 0, 100% 0, 100% 93%, 50% 100%, 0 93%);
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
   height:35em;
   width: 20em;
   
@@ -126,16 +128,64 @@ h1 {
   height: 100%;
   clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);}
 
-.itemBottom {
-  grid-column-start: 1;
-  grid-column-end: 6;
-  border: solid 1px rgb(56, 54, 54);
+  #newsLatterFormularWrapper{
+    display: grid;
+    grid-template-columns: 1fr 0.5fr 1fr;
+    height: 25em;
+    background-color: rgb(233, 164, 16);
+    border: none;
+
+  }
+
+  #newsLatterFormular{
+    display: flex;
+    justify-content: center;
+        
+  }
+
+  #newsLatterFormularInput{
+    width: 40em;
+    height: 5em;
+    border: none;
+    margin: auto 0 auto 0;
+  }
+#newsLatterFormularButton{
+  height: 2.1em;
+  width: 4.5em;
+  border: none;
+  margin: auto 0 auto 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2em;
+background-color: #2c2d2d;
+color: silver;
 }
 
-.three img {
-  width: 10rem;
-  float: left;
-  padding-right: 0;
+#newsLatterFormularButton:hover{
+
+  background-color: black;
+  cursor: pointer; 
+  color: gold;
+}
+
+#newsLatterText{
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 4em;
+ 
+  padding: 0.1em;
+}
+
+
+
+#newsLatterImage{
+  display: flex ;
+  justify-content: center;
+  margin: auto;
+   width: 40%;
+    
+  
 }
 
 .foot {
@@ -156,6 +206,9 @@ ul {
   list-style-type: none;
 }
 
+
+
+
 footer #copy {
   color: rgb(255, 255, 255);
   background-color: #2c2d2d;
@@ -163,6 +216,7 @@ footer #copy {
   font-size: 0.8em;
   border-radius: 0px 0px 0, 0;
 }
+
 
 @media only screen and (max-width: 600px) {
   .topnav a:not(:first-child) {
