--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   grid-template-columns: auto auto;
   position: fixed;
   top:0;
+  z-index: 1;
   width: 100%;
   background-color: #2c2d2d;
 
