--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ h1 {
     width: 100%;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
     top: 3em;
+    transition: 1s ease;
 }
 
 #tree {
