--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .topnavWithoutLogo:hover {
-  background-color: #2c2d2d;
+  background-color: #3b3b3b;
   color: gold;
   transition: 0.3s ease;
   height: 124%;
@@ -48,7 +48,7 @@ body {
 }
 
 .active {
-  background-color: #323232;
+  background-color: #3b3b3b;
   color: gold;
   height: 124%;
  clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
@@ -132,9 +132,9 @@ h1 {
   grid-template-columns: auto;
   background-color: rgb(255, 255, 255);
   padding: 0.5em;
-  margin: 0.5em;
+  margin: 0.2em;
   height: 100%;
-  box-shadow: 5px 10px rgb(0, 0, 0);
+  box-shadow: 10px 10px rgb(0, 0, 0);
   clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);}
 
  
