--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ h1 {
   background-color: rgb(255, 255, 255);
   padding: 0.5em;
   margin: 0.2em;
-  height: 100%;
+  height: 10 0%;
   box-shadow: 10px 10px rgb(0, 0, 0);
   clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
 }
@@ -189,11 +189,11 @@ h1 {
 #price {
   display: inline;
   font-size: 1em;
-  
   color: #2c2d2d;
   background-color:silver;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
-
 
 #productDetail{
  height: 3em;
@@ -201,7 +201,9 @@ h1 {
   border: none;
   font-weight: 600;
   border-radius: 0.5em;
+  margin-bottom: 3.5em;
 }
+
 #productDetail:hover{
 background-color: gold;
 cursor: pointer;
@@ -271,7 +273,7 @@ cursor: pointer;
   font-family: "Tahoma", Geneva, Verdana, sans-serif;
   line-height: 2;
   background-color: #2c2d2d;
-  border-radius: 10px, 10px, 0px, 0px;
+  border-radius: 10px, 10px, 0, 0;
 }
 
 ul {
@@ -287,7 +289,7 @@ footer #copy {
   background-color: #2c2d2d;
   font-family: sans-serif;
   font-size: 0.8em;
-  border-radius: 0px 0px 0, 0;
+  
 }
 
 @media only screen and (max-width: 1600px){
