--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ body {
   width: 100%;
 }
 #wrapper img:hover {
-  transform: scale(1.3);
+  transform: scale(1.5);
+  transition: 1s ease;
   z-index: -1;
   cursor:zoom-in;
 }
@@ -73,7 +74,7 @@ h1 {
   font-size: 1.2em;
   height: 20%;
   color: rgb(44, 44, 44);
-  padding: 0px;
+  
   text-align: left;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -141,6 +142,8 @@ h1 {
   color: white;
   cursor: pointer;
 }
+
+
 
 .description {
   display: grid;
