--- a/style.css
+++ b/style.css
@@ -62,9 +62,8 @@ body {
   transform: scale(1.5);
   transition: 1s ease;
   z-index: -1;
-  cursor:zoom-in;
+  cursor: zoom-in;
 }
-
 
 header img {
   width: 100%;
@@ -74,7 +73,7 @@ h1 {
   font-size: 1.2em;
   height: 20%;
   color: rgb(44, 44, 44);
-  
+
   text-align: left;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -95,7 +94,7 @@ h1 {
   top: 5em;
   background-color: #2c2d2d;
   padding: 1em 0 0 1.1em;
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
+  clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
   height: 34em;
   width: 19em;
 }
@@ -110,15 +109,13 @@ h1 {
   text-decoration: none;
   margin-bottom: 20px;
   font-size: 1.2em;
-  
-  
 }
 
 .sideMenu:hover {
   color: gold;
   background-color: #3b3b3b;
   width: inherit;
-  transition: 0.5s ease; 
+  transition: 0.5s ease;
 }
 
 #search {
@@ -142,8 +139,6 @@ h1 {
   color: white;
   cursor: pointer;
 }
-
-
 
 .description {
   display: grid;
@@ -169,6 +164,12 @@ h1 {
   text-align: center;
   background-color: rgba(149, 149, 149, 0.264);
   padding: 0.5em;
+  display: inline;
+  font-size: 1em;
+  color: #2c2d2d;
+  background-color: silver;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 #navFlexRight {
@@ -177,7 +178,6 @@ h1 {
   justify-content: flex-end;
 }
 
-
 .items {
   display: grid;
   grid-template-columns: auto;
@@ -185,32 +185,108 @@ h1 {
   padding: 0.5em;
   margin: 0.2em;
   height: 10 0%;
+  border-top: 3px solid red;
   box-shadow: 10px 10px rgb(0, 0, 0);
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
+  clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
 }
 
-#price {
-  display: inline;
-  font-size: 1em;
-  color: #2c2d2d;
-  background-color:silver;
-  margin-bottom: 1em;
-  margin-top: 1em;
+#productDetailWrapper {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-top: 7em;
+  margin-bottom: 5em;
+   margin-left: 30%;
+   margin-right: auto;
+    display: grid;
+  grid-template-areas:
+    "IMAGE_SRC PRODUCT_NAME "
+    "IMAGE_SRC ID "
+    "IMAGE_SRC AVAILABILITY "
+    "IMAGE_SRC PRICE "
+    "IMAGE_SRC PRICE_WITH_VAT "
+    "IMAGE_SRC BASKET"
+    "DESCRIPTION DESCRIPTION ";
+    border-top:3px solid rgb(255, 3, 3);
+    padding: 1em;
+    width: 60%;
+    top: 10em;
+    background-color: white;
+    clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
 }
 
-#productDetail{
- height: 3em;
-  background-color: chartreuse;
+#IMAGE_SRC{ 
+  grid-area: IMAGE_SRC;
+  width: 100%;
+  padding-right: 1em;
+}
+  #IMAGE_SRC:hover{ 
+  transform: scale(2);
+  transition: 1s ;
+
+cursor: zoom-in;
+
+}
+#PRODUCT_NAME{
+  grid-area: PRODUCT_NAME;
+font-size: 1.5em;
+font-weight: 600;
+}
+
+#ID{
+  grid-area: ID;
+
+}
+#AVAILABILITY{grid-area: AVAILABILITY;}
+#PRICE{grid-area: PRICE;}
+#PRICE_WITH_VAT{grid-area: PRICE_WITH_VAT;}
+
+#BASKET{
+  grid-area: BASKET;
+  margin: 2em 0 2em 0;
+  height: 3em;
+  width: 10em;
+  cursor: pointer;
+  background-color: greenyellow;
   border: none;
   font-weight: 600;
+}
+
+#BASKET:hover{
+  background-color: rgb(255, 234, 47);
+  
+}
+
+#DESCRIPTION{
+  grid-area: DESCRIPTION;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  border-top:3px solid rgb(255, 3, 3);
+
+}
+
+.productdetailSpan{
+  font-size: 0.7em;
+  color: rgb(117, 117, 117);
+}
+
+
+
+#productDetail {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 3em;
+  background-color: chartreuse;
+  border: none;
+  text-decoration: none;
+  color: black;
   border-radius: 0.5em;
   margin-bottom: 3.5em;
 }
 
-#productDetail:hover{
-background-color: gold;
-cursor: pointer;
-
+#productDetail:hover {
+  background-color: gold;
+  cursor: pointer;
 }
 
 #newsLatterFormularWrapper {
@@ -292,25 +368,18 @@ footer #copy {
   background-color: #2c2d2d;
   font-family: sans-serif;
   font-size: 0.8em;
-  
 }
 
-@media only screen and (max-width: 1600px){
-
-#wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 0.5em;
-  margin: 39em 5% 0 5%;
+@media only screen and (max-width: 1600px) {
+  #wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 0.5em;
+    margin: 39em 5% 0 5%;
+  }
 }
-
-} 
 
 @media only screen and (max-width: 600px) {
-
-
- 
-
   .topnav a:not(:first-child) {
     display: none;
   }
@@ -343,4 +412,3 @@ footer #copy {
     text-align: left;
   }
 }
-
