--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ h1 {
   grid-area: IMAGE_SRC;
   width: 100%;
   padding-right: 1em;
+  padding-bottom: 1em;
 }
   #IMAGE_SRC:hover{ 
   transform: scale(2);
