--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
   width: 100%;
 }
 .productsWrapper img:hover {
-  transform: scale(1.5);
+  transform: scale(1.2);
   transition: 1s ease;
   z-index: -1;
   cursor: zoom-in;
@@ -76,7 +76,7 @@ body {
   width: 100%;
 }
 .relatedProductsWrapper img:hover {
-  transform: scale(1.5);
+  transform: scale(1.2);
   transition: 1s ease;
   z-index: -1;
   cursor: zoom-in;
@@ -87,16 +87,26 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: white;
-  color:  #2c2d2d;
-  border-top: 10px solid gold;
-  
+  font-size:15px;
+  width:100%;
+  height:3em;
+  margin-bottom: 2em;
+  border-width:0px;
+  color:rgb(114, 114, 114);
+  border-top: 10px solid rgb(174, 174, 174);
+  box-shadow:inset 0px 1px 0px 0px #dcecfb;
+  text-shadow:inset -50px -50px 0px #528ecc;
+  background:linear-gradient(rgb(202, 202, 202), rgb(230, 230, 230));
 }
+
+  
+  
+
 
 #relatedProductsH1 strong{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: x-large;
-  margin: 1em;
+  margin: 0.5em;
 }
 
 header img {
@@ -169,7 +179,7 @@ h1 {
 }
 
 #find:hover {
-  background-color: gold;
+  background: #528009;;
   color: white;
   cursor: pointer;
 }
@@ -201,7 +211,7 @@ h1 {
   display: inline;
   font-size: 1em;
   color: #2c2d2d;
-  background-color: silver;
+  background-color: rgb(237, 237, 237);
   margin-bottom: 1em;
   margin-top: 1em;
 }
@@ -225,6 +235,7 @@ h1 {
 }
 
 #productDetailWrapper {
+  z-index: 1;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 7em;
   margin-bottom: 2em;
@@ -259,10 +270,10 @@ h1 {
   grid-area: FIGURE;
 }
   #IMAGE_SRC:hover{ 
-  transform: scale(2);
+    z-index: -1;
+  transform: scale(1.5);
   transition: 1s ;
-
-cursor: zoom-in;
+  cursor: zoom-in;
 
 }
 #PRODUCT_NAME{
@@ -298,41 +309,60 @@ font-weight: 600;
 
 #freeDelivery{
   position: relative;
-  text-align: center;
-   background-color: chartreuse;
-   width: 70%;
-  height: 2em;
-  border-radius: 1em;
-  border: aqua;
-  color: rgb(255, 0, 0);
-  font-size: 1.3em;
-  margin-left: 3em;
-  font-weight: 600;
-
+  margin: 0 auto 0 auto;
+  font-size:21px;
+  font-family:Arial;
+  width:15em;
+  height:2em;
+  border-width:1px;
+  color:#ffffff;
+  border-color:#d83526;
+  font-weight:bold;
+  border-top-left-radius:1em;
+  border-bottom-right-radius:1em;
+  border-top-right-radius:6px;
+  border-bottom-left-radius:6px;
+  box-shadow:inset 0px 1px 0px 0px #f29c93;
+  text-shadow:inset 0px 1px 0px #b23e35;
+  background:linear-gradient(#fe1a00, #ce0100);
 }
+
+
+
 
 #BASKET{
   grid-area: BASKET;
-  margin: 2em 0 2em 0;
+  margin: 1em 0 2em 0;
   height: 3em;
   width: 10em;
-  cursor: pointer;
-  background-color: greenyellow;
-  border: none;
-  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size:1em;
+  border-width:1px;
+  color:#ffffff;
+  border-color:#74b807;
+  text-decoration: none;
+  font-weight:bold;
+  border-radius:6px;
+  box-shadow:inset 0px 1px 0px 0px #a4e271;
+  text-shadow:inset 0px 1px 0px #528009;
+  background:linear-gradient(#89c403, #77a809);
+  
 }
 
 #BASKET:hover{
-  background-color: rgb(255, 234, 47);
-  
+  background: #528009;
+  cursor: pointer;
 }
 
 #INPUT{
   grid-area: INPUT;
   width: 5em;
-  height: 2em;
+  height: 2.3em;
   margin-left: 0.5em;
-  margin-top: 1.3em;
+  margin-top: 0.8em;
   text-align: center;
   border-color: rgb(212, 212, 212);
 font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -368,17 +398,25 @@ input[type=number]::-webkit-inner-spin-button {
   justify-content: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   height: 3em;
-  background-color: chartreuse;
-  border: none;
+  font-size:1em;
+  font-family:Arial;
+  width:100%;
+  height:3em;
+  border-width:1px;
+  color:#ffffff;
+  border-color:#74b807;
   text-decoration: none;
-  color: black;
-  border-radius: 0.5em;
-  margin-bottom: 3.5em;
+  font-weight:bold;
+  border-radius:6px;
+  box-shadow:inset 0px 1px 0px 0px #a4e271;
+  text-shadow:inset 0px 1px 0px #528009;
+  background:linear-gradient(#89c403, #77a809);
+  margin-bottom: 2em;
 }
 
 #productDetail:hover {
-  background-color: gold;
-  cursor: pointer;
+  background: #528009;
+  
 }
 
 
