--- a/basket.css
+++ b/basket.css
@@ -1,191 +1,35 @@
 #basketWrapperGrid {
-  z-index: 1;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-top: 7em;
-  margin-bottom: 2em;
-  margin-left: auto;
-  margin-right: auto;
-  border-top: 10px solid gold;
-  padding: 1em;
-  width: 80%;
-
-  top: 10em;
-  background-color: white;
-  clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
+    z-index: 1;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 7em auto 2em;
+    border-top: 10px solid gold;
+    padding: 1em;
+    width: 80%;
+    background-color: white;
+    top: 10em;
+    clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
 }
 #basketWrapperHeader {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 0.9fr 0.6fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 0.9fr 0.6fr;
 
-  margin-bottom: 1em;
+    margin-bottom: 1em;
 }
 
 #h1InBasket {
-  grid-column: 1 / 5;
-  margin-top: auto;
-  margin-bottom: auto;
-  font-size: 2em;
+    grid-column: 1 / 5;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: 2em;
 }
 
 #continueShoppIngBaskeHead {
-  margin-left: 1em;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-#continueOrderingButtonHead {
-  height: 3em;
-  width: 10em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 1em;
-  border-width: 1px;
-  color: #ffffff;
-  border-color: #74b807;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 6px;
-  box-shadow: inset 0px 1px 0px 0px #a4e271;
-  text-shadow: inset 0px 1px 0px #528009;
-  background: linear-gradient(#89c403, #77a809);
-}
-
-#continueOrderingButtonHead:hover {
-  background: #528009;
-  cursor: pointer;
-}
-
-#ItemBasketWrapperGrid {
-  display: grid;
-  grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 1fr;
-  border: 1px solid gray;
-}
-
-.deleteItemFromBasket {
-  display: flex;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 1em;
-}
-
-.imageInBasket {
-  width: 100%;
-  min-width: 100px;
-}
-
-.NameItemInBasket {
-  margin: auto 0 auto 0;
-  font-size: 1em;
-}
-
-.increaseCountBasket {
-  width: 5em;
-  height: 2.3em;
-  margin: auto;
-  text-align: center;
-  border-color: rgb(212, 212, 212);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 1.3em;
-  border: 2px solid black;
-}
-.increaseCountBasket:-webkit-inner-spin-button {
-  opacity: 1;
-  height: 2em;
-  width: 2em;
-}
-
-.pricewithoutBasket {
-  margin: auto;
-  text-align: center;
-}
-
-.pricewithBasket {
-  margin: auto;
-  text-align: center;
-}
-
-.sumInRowBasket {
-  margin: auto;
-  text-align: center;
-}
-
-
-
-#totalPriceInBasketWrapper{
-    display: grid;
-    Grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 1fr;
-  border: 1px solid gray;
-  margin-top:1em;
-}
-
-#totalPriceInBasketWithoutVAT{
-    grid-column: 7;
-    margin: auto;
-    padding: 0.5em;
-  text-align: center;
-}
-
-#totalPriceVAT{
-    grid-column: 7;
-    margin: auto;
-    padding: 0.5em;
-  text-align: center;
-}
-
-#totalPriceInBasketWithVAT{
-    grid-column: 7;
-    margin: auto;
-    padding: 0.5em;
-  text-align: center;
-}
-
-
-
-
-#textWithoutVAT{
-    grid-column: 6;
-    
-    padding: 0.5em;
-  text-align:right;
-}
-
-
-#textVAT{
-    grid-column: 6;
-    
-    padding: 0.5em;
-    text-align:right;
-}
-
-#textWithVAT{
-    grid-column: 6;
-    
-    padding: 0.5em;
-    text-align:right;
-}
-
-
-
-
-#totalPriceInBasketWrapperGrid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 0.9fr 0.6fr;
-      margin-top: 1em;
-      margin-bottom: 3em;
-  }
-
-
-  
-  #continueShoppIngBasketFooter {
-      grid-column: 5;
     margin-left: 1em;
     margin-top: auto;
     margin-bottom: auto;
-  }
-  
-  #continueOrderingButtonFooter {
+}
+
+#continueOrderingButtonHead {
     height: 3em;
     width: 10em;
     display: flex;
@@ -199,17 +43,199 @@
     text-decoration: none;
     font-weight: bold;
     border-radius: 6px;
-    box-shadow: inset 0px 1px 0px 0px #a4e271;
-    text-shadow: inset 0px 1px 0px #528009;
+    box-shadow: inset 0 1px 0 0 #a4e271;
+    text-shadow: inset 0 1px 0 #528009;
     background: linear-gradient(#89c403, #77a809);
-  }
-  
-  #continueOrderingButtonFooter:hover {
+}
+
+#continueOrderingButtonHead:hover {
     background: #528009;
     cursor: pointer;
-  }
+}
 
-  #deleteItemsFromBaset{
+            
+            
+#ItemBasketWrapperGrid{
+    border: 1px solid black;
+}
+
+
+
+#itemHeader{
+    display: grid;
+    grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 1fr;
+    border: 1px solid black;
+    margin-bottom: 1em;
+}
+
+#one{
+    grid-column: 5;
+    text-align: center;
+    font-weight: 600;
+ }
+
+ #two{
+    grid-column: 6;
+    text-align: center;
+    font-weight: 600;
+ }
+
+ #three{
+    grid-column: 7;
+    text-align: center;
+    font-weight: 600;
+ }
+
+.item {
+    display: grid;
+    grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 1fr;
+    
+
+}
+
+.deleteItemFromBasket {
+    display: flex;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 1em;
+    cursor: pointer;
+}
+
+.imageInBasket {
+    width: 100%;
+    min-width: 100px;
+    margin: 1em 0 .5em 1em;
+}
+
+.NameItemInBasket {
+    margin: auto ;
+    font-size: 1em;
+}
+
+.increaseCountBasket {
+    width: 5em;
+    height: 2.3em;
+    margin: auto;
+    text-align: center;
+    border-color: rgb(212, 212, 212);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.3em;
+    border: 2px solid black;
+}
+.increaseCountBasket:-webkit-inner-spin-button {
+    opacity: 1;
+    height: 2em;
+    width: 2em;
+}
+
+.pricewithoutBasket {
+    margin: auto;
+    text-align: center;
+}
+
+.pricewithBasket {
+    margin: auto;
+    text-align: center;
+}
+
+.sumInRowBasket {
+    margin: auto;
+    text-align: center;
+}
+
+
+#totalPriceInBasketWrapper {
+    display: grid;
+    Grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 1fr;
+    border: 1px solid gray;
+    margin-top: 1em;
+}
+
+#totalPriceInBasketWithoutVAT {
+    grid-column: 7;
+    margin: auto;
+    padding: 0.5em;
+    text-align: center;
+}
+
+#totalPriceVAT {
+    grid-column: 7;
+    margin: auto;
+    padding: 0.5em;
+    text-align: center;
+}
+
+#totalPriceInBasketWithVAT {
+    grid-column: 7;
+    margin: auto;
+    padding: 0.5em;
+    text-align: center;
+}
+
+
+#textWithoutVAT {
+    grid-column: 6;
+
+    padding: 0.5em;
+    text-align: right;
+}
+
+
+#textVAT {
+    grid-column: 6;
+
+    padding: 0.5em;
+    text-align: right;
+}
+
+#textWithVAT {
+    grid-column: 6;
+
+    padding: 0.5em;
+    text-align: right;
+}
+
+
+#totalPriceInBasketWrapperGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 0.9fr 0.6fr;
+    margin-top: 1em;
+    margin-bottom: 3em;
+}
+
+
+#continueShoppIngBasketFooter {
+    grid-column: 5;
+    margin-left: 1em;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#continueOrderingButtonFooter {
+    height: 3em;
+    width: 10em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1em;
+    border-width: 1px;
+    color: #ffffff;
+    border-color: #74b807;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 6px;
+    box-shadow: inset 0 1px 0 0 #a4e271;
+    text-shadow: inset 0 1px 0 #528009;
+    background: linear-gradient(#89c403, #77a809);
+}
+
+#continueOrderingButtonFooter:hover {
+    background: #528009;
+    cursor: pointer;
+}
+
+#deleteItemsFromBaset {
     height: 3em;
     width: 10em;
     display: flex;
@@ -223,13 +249,13 @@
     text-decoration: none;
     font-weight: bold;
     border-radius: 6px;
-    box-shadow: inset 0px 1px 0px 0px #ff0000;
-    text-shadow: inset 0px 1px 0px #ff1313;
+    box-shadow: inset 0 1px 0 0 #ff0000;
+    text-shadow: inset 0 1px 0 #ff1313;
     background: linear-gradient(#ff0505, #cb0c0c);
-  }
+}
 
-  #deleteItemsFromBaset:hover{
+#deleteItemsFromBaset:hover {
     background: #8a0000;
     cursor: pointer;
 
-  }
+}
