--- a/basket.css
+++ b/basket.css
@@ -29,7 +29,7 @@
     margin-bottom: auto;
 }
 
-#continueOrderingButtonHead {
+.continueOrderingButtonHead {
     height: 3em;
     width: 10em;
     display: flex;
@@ -206,7 +206,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 0.9fr 0.6fr;
     margin-top: 1em;
-    margin-bottom: 5em;
+    margin-bottom: 2em;
 }
 
 
@@ -401,10 +401,14 @@
 /**Kontaktné údaje */
 
   #contactBasketWprapper{
-    width: 50%;
-    margin: auto;
-    
-    
+    width: 40%;
+    margin: 1em auto 5em auto;
+        
+}
+
+.sendOrderButton{
+    margin: 2em auto auto auto;
+    width: 16em;
 }
 
 
