--- a/basket.css
+++ b/basket.css
@@ -92,8 +92,10 @@
 
  #three{
     grid-column: 7;
-    text-align: center;
+    text-align: right;
     font-weight: 600;
+    margin-right: 0.5em;
+
  }
 
 .item {
@@ -281,7 +283,7 @@ text-decoration: none;
 
 #deliveryBasketWprapper{
     display: grid;
-    grid-template-columns: 5fr 0.15fr 1fr 2fr 0.5fr;
+    grid-template-columns: 5fr 0.1fr 1fr 2fr 1fr;
    /* background-color: #D7f5ff;*/
    background: rgb(215,245,255);
 background: linear-gradient(180deg, rgba(215,245,255,0.529) 22%, rgba(89,207,54,0.3) 34%, rgba(137, 120, 104, 0.3) 94%, rgba(136,119,103,0.4) 99%);
