--- a/basket.css
+++ b/basket.css
@@ -72,7 +72,7 @@
 
 #itemHeader{
     display: grid;
-    grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 1fr;
+    grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 0.7fr;
     border: 1px solid silver;
     padding: 0.5em;
     margin-bottom: 1em;
@@ -100,7 +100,7 @@
 
 .item {
     display: grid;
-    grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 1fr;
+    grid-template-columns: 0.05fr 1fr 3.5fr 0.4fr 0.7fr 0.8fr 0.7fr;
     
     
 
@@ -117,7 +117,7 @@
 .imageInBasket {
     width: 100%;
     min-width: 100px;
-    margin: 1em 0 .5em 1em;
+    margin: 1em 1em .5em 1em;
 }
 
 .NameItemInBasket {
