--- a/style.css
+++ b/style.css
@@ -581,7 +581,7 @@ z-index: 1;
 .navigation ul li:hover {
   position: relative;
   z-index: 510;
-  cursor: default;
+  cursor:pointer;
 }
 .navigation ul ul {
   visibility: hidden;
