--- a/style.css
+++ b/style.css
@@ -539,6 +539,7 @@ z-index: 1;
   position: absolute;
   padding: 0;
   margin: 0;
+  padding-top: 1em;
   border: 0;
   line-height: 1;
   left: 4em;
@@ -548,7 +549,7 @@ z-index: 1;
 
 #polygon{
   position:absolute;
-  top: 32em;
+  top: 30.5em;
   width: 19.8em;
   height: 5em;
   background-color: #2c2d2d;
